<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="57dp"
        android:text="@string/username"
        android:textAllCaps="false"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtViewFlatNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="699dp" />

    <TextView
        android:id="@+id/txtViewFlatNumber"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/flat_number"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnDues"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/btnDues"
        android:layout_width="121dp"
        android:layout_height="52dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="68dp"
        android:onClick="showDues"
        android:text="@string/Dues"
        app:layout_constraintBottom_toTopOf="@+id/btnDirectory"
        app:layout_constraintEnd_toStartOf="@+id/btnVisitors"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewFlatNumber"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/btnVisitors"
        android:layout_width="101dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="68dp"
        android:onClick="showVisitors"
        android:text="@string/visitors"
        app:layout_constraintBottom_toTopOf="@+id/btnParking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnDues"
        app:layout_constraintTop_toBottomOf="@+id/txtViewFlatNumber"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/btnDirectory"
        android:layout_width="121dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="92dp"
        android:onClick="showDirectory"
        android:text="@string/Directory"
        app:layout_constraintEnd_toStartOf="@+id/btnParking"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDues"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/btnParking"
        android:layout_width="101dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:onClick="showParkingDetails"
        android:text="@string/AllotedParking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnDirectory"
        app:layout_constraintTop_toBottomOf="@+id/btnVisitors"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/btnHelpDesk"
        android:layout_width="121dp"
        android:layout_height="50dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="140dp"
        android:onClick="showHelpDesk"
        android:text="@string/Complaint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewFlatNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>